--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -654,6 +654,7 @@ allow 194.233.174.56;
 allow 194.26.192.77;
 allow 194.53.137.156;
 allow 194.87.55.98;
+allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.47.238.176;
@@ -1599,6 +1600,7 @@ allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:1467::;
+allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:6fc2:8000::639;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
@@ -1723,6 +1725,7 @@ allow 45.141.215.97;
 allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.157.11.6;
+allow 45.159.250.144;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
