--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -654,6 +654,7 @@ set_real_ip_from 194.233.174.56;
 set_real_ip_from 194.26.192.77;
 set_real_ip_from 194.53.137.156;
 set_real_ip_from 194.87.55.98;
+set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.47.238.176;
@@ -957,6 +958,7 @@ set_real_ip_from 45.141.215.97;
 set_real_ip_from 45.148.10.111;
 set_real_ip_from 45.148.10.169;
 set_real_ip_from 45.157.11.6;
+set_real_ip_from 45.159.250.144;
 set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.61.186.203;
 set_real_ip_from 45.61.187.200;
