--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -794,7 +794,7 @@ set_real_ip_from 2001:67c:e28:1::3;
 set_real_ip_from 2001:67c:e28:1::4;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
-set_real_ip_from 2001:b011:4006:d5b3::b;
+set_real_ip_from 2001:b011:4006:7826::b;
 set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
@@ -925,6 +925,7 @@ set_real_ip_from 209.141.45.141;
 set_real_ip_from 209.141.45.81;
 set_real_ip_from 209.141.46.203;
 set_real_ip_from 209.141.51.180;
+set_real_ip_from 209.141.51.30;
 set_real_ip_from 209.141.54.203;
 set_real_ip_from 209.141.54.218;
 set_real_ip_from 209.141.55.26;
@@ -952,7 +953,6 @@ set_real_ip_from 23.151.8.8;
 set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
 set_real_ip_from 23.155.8.104;
-set_real_ip_from 23.184.48.13;
 set_real_ip_from 23.184.48.78;
 set_real_ip_from 23.191.200.10;
 set_real_ip_from 23.191.200.11;
@@ -987,7 +987,6 @@ set_real_ip_from 23.191.200.9;
 set_real_ip_from 23.236.122.193;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 23.94.36.167;
-set_real_ip_from 23.94.80.229;
 set_real_ip_from 2400:8901::f03c:94ff:fe7f:59f6;
 set_real_ip_from 2400:8901::f03c:95ff:fe89:4a88;
 set_real_ip_from 2400:8905::f03c:95ff:fe67:ec03;
@@ -1020,7 +1019,6 @@ set_real_ip_from 2602:fc24:10:61b::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:9fef::1;
 set_real_ip_from 2602:fc24:12:a679::1;
-set_real_ip_from 2602:fc24:18:a378::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
@@ -1038,6 +1036,7 @@ set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
 set_real_ip_from 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 set_real_ip_from 2605:6400:20:1a8:f5f2:4a28:b5ed:931d;
+set_real_ip_from 2605:6400:20:2417::69;
 set_real_ip_from 2605:6400:20:3ea:c2a3:1162:7224:e5df;
 set_real_ip_from 2605:6400:20:769:e559:5c8f:a3e9:aed1;
 set_real_ip_from 2605:6400:20:be7::1;
