--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -101,6 +101,7 @@ allow 108.59.12.3;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
+allow 109.228.160.190;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -117,10 +118,10 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
+allow 1.170.206.250;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
-allow 121.78.28.166;
 allow 123.253.35.32;
 allow 123.58.200.119;
 allow 125.212.241.131;
@@ -160,6 +161,7 @@ allow 152.32.206.127;
 allow 152.32.218.34;
 allow 152.53.133.14;
 allow 152.53.53.243;
+allow 153.216.238.181;
 allow 154.16.116.61;
 allow 154.26.159.157;
 allow 154.41.95.1;
@@ -210,7 +212,6 @@ allow 172.81.131.111;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
-allow 172.81.135.157;
 allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.255.198.243;
@@ -1280,7 +1281,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1588,6 +1588,54 @@ allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
+allow 2a10:1fc0:10::19eb:717b;
+allow 2a10:1fc0:10::28fc:90d4;
+allow 2a10:1fc0:10::2a17:5b54;
+allow 2a10:1fc0:10::2cf4:6ba2;
+allow 2a10:1fc0:10::2d91:1a2d;
+allow 2a10:1fc0:10::3903:457;
+allow 2a10:1fc0:10::3919:de17;
+allow 2a10:1fc0:10::3a1:5e9f;
+allow 2a10:1fc0:10::3dc5:e694;
+allow 2a10:1fc0:10::3eb3:d1d0;
+allow 2a10:1fc0:10::3ec1:2b1e;
+allow 2a10:1fc0:10::40d8:83c;
+allow 2a10:1fc0:10::42d2:f78b;
+allow 2a10:1fc0:10::5138:4dfa;
+allow 2a10:1fc0:10::5719:261d;
+allow 2a10:1fc0:10::61d9:7617;
+allow 2a10:1fc0:10::61e2:c84d;
+allow 2a10:1fc0:10::627f:3c31;
+allow 2a10:1fc0:10::694a:c359;
+allow 2a10:1fc0:10::6b4c:30fc;
+allow 2a10:1fc0:10::6c2e:469a;
+allow 2a10:1fc0:10::6d92:d6ab;
+allow 2a10:1fc0:10::6fde:4b8d;
+allow 2a10:1fc0:10::792f:38b4;
+allow 2a10:1fc0:10::895d:abf9;
+allow 2a10:1fc0:10::8a03:d023;
+allow 2a10:1fc0:10::8b78:d42e;
+allow 2a10:1fc0:10::8d4d:eca2;
+allow 2a10:1fc0:10::9a73:d4f2;
+allow 2a10:1fc0:10::9d80:c9f7;
+allow 2a10:1fc0:10::9e08:e765;
+allow 2a10:1fc0:10::a3a5:49da;
+allow 2a10:1fc0:10::a458:8b37;
+allow 2a10:1fc0:10::a63c:724c;
+allow 2a10:1fc0:10::b571:1205;
+allow 2a10:1fc0:10::bf3f:d195;
+allow 2a10:1fc0:10::c129:61a1;
+allow 2a10:1fc0:10::c385:c7fa;
+allow 2a10:1fc0:10::c7c7:2f84;
+allow 2a10:1fc0:10::d5a6:a292;
+allow 2a10:1fc0:10::d5d0:db30;
+allow 2a10:1fc0:10::d6b7:b3e9;
+allow 2a10:1fc0:10::dbe0:6173;
+allow 2a10:1fc0:10::dbe9:7852;
+allow 2a10:1fc0:10::e4c8:9020;
+allow 2a10:1fc0:10::ea87:5496;
+allow 2a10:1fc0:10::fa6c:cac5;
+allow 2a10:1fc0:10::fdb0:ba7f;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1655,7 +1703,6 @@ allow 2c0f:6c0:0:4::95ea;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1666,6 +1713,7 @@ allow 37.228.129.5;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1771,6 +1819,7 @@ allow 46.182.21.248;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
+allow 46.249.49.183;
 allow 46.30.188.218;
 allow 47.254.142.180;
 allow 47.89.193.230;
@@ -1785,7 +1834,6 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1821,7 +1869,6 @@ allow 5.45.104.176;
 allow 5.45.98.162;
 allow 57.128.220.107;
 allow 5.79.66.19;
-allow 60.39.33.71;
 allow 62.133.45.2;
 allow 62.133.63.146;
 allow 62.171.137.169;
@@ -1874,6 +1921,30 @@ allow 84.19.182.20;
 allow 84.211.226.13;
 allow 84.239.46.144;
 allow 85.239.41.130;
+allow 85.239.55.11;
+allow 85.239.55.110;
+allow 85.239.55.112;
+allow 85.239.55.114;
+allow 85.239.55.123;
+allow 85.239.55.132;
+allow 85.239.55.168;
+allow 85.239.55.173;
+allow 85.239.55.174;
+allow 85.239.55.184;
+allow 85.239.55.189;
+allow 85.239.55.192;
+allow 85.239.55.201;
+allow 85.239.55.228;
+allow 85.239.55.230;
+allow 85.239.55.239;
+allow 85.239.55.24;
+allow 85.239.55.249;
+allow 85.239.55.25;
+allow 85.239.55.250;
+allow 85.239.55.31;
+allow 85.239.55.37;
+allow 85.239.55.51;
+allow 85.239.55.80;
 allow 85.90.196.46;
 allow 85.93.218.204;
 allow 86.54.28.49;
@@ -1914,6 +1985,30 @@ allow 91.219.236.101;
 allow 91.219.236.91;
 allow 91.219.237.39;
 allow 91.227.114.153;
+allow 91.227.77.107;
+allow 91.227.77.108;
+allow 91.227.77.119;
+allow 91.227.77.125;
+allow 91.227.77.139;
+allow 91.227.77.158;
+allow 91.227.77.160;
+allow 91.227.77.181;
+allow 91.227.77.193;
+allow 91.227.77.200;
+allow 91.227.77.208;
+allow 91.227.77.209;
+allow 91.227.77.226;
+allow 91.227.77.229;
+allow 91.227.77.237;
+allow 91.227.77.25;
+allow 91.227.77.31;
+allow 91.227.77.36;
+allow 91.227.77.44;
+allow 91.227.77.48;
+allow 91.227.77.51;
+allow 91.227.77.54;
+allow 91.227.77.62;
+allow 91.227.77.97;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
