--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -101,6 +101,7 @@ deny 108.59.12.3;
 deny 108.61.189.136;
 deny 109.104.153.22;
 deny 109.169.33.163;
+deny 109.228.160.190;
 deny 109.69.67.17;
 deny 109.70.100.1;
 deny 109.70.100.2;
@@ -117,10 +118,10 @@ deny 109.70.100.70;
 deny 109.70.100.71;
 deny 113.20.31.38;
 deny 114.35.245.150;
+deny 1.170.206.250;
 deny 118.163.74.160;
 deny 118.193.64.139;
 deny 118.194.231.50;
-deny 121.78.28.166;
 deny 123.253.35.32;
 deny 123.58.200.119;
 deny 125.212.241.131;
@@ -160,6 +161,7 @@ deny 152.32.206.127;
 deny 152.32.218.34;
 deny 152.53.133.14;
 deny 152.53.53.243;
+deny 153.216.238.181;
 deny 154.16.116.61;
 deny 154.26.159.157;
 deny 154.41.95.1;
@@ -210,7 +212,6 @@ deny 172.81.131.111;
 deny 172.81.131.139;
 deny 172.81.131.156;
 deny 172.81.132.94;
-deny 172.81.135.157;
 deny 173.0.3.111;
 deny 173.237.206.68;
 deny 173.255.198.243;
@@ -1280,7 +1281,6 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
@@ -1588,6 +1588,54 @@ deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
+deny 2a10:1fc0:10::19eb:717b;
+deny 2a10:1fc0:10::28fc:90d4;
+deny 2a10:1fc0:10::2a17:5b54;
+deny 2a10:1fc0:10::2cf4:6ba2;
+deny 2a10:1fc0:10::2d91:1a2d;
+deny 2a10:1fc0:10::3903:457;
+deny 2a10:1fc0:10::3919:de17;
+deny 2a10:1fc0:10::3a1:5e9f;
+deny 2a10:1fc0:10::3dc5:e694;
+deny 2a10:1fc0:10::3eb3:d1d0;
+deny 2a10:1fc0:10::3ec1:2b1e;
+deny 2a10:1fc0:10::40d8:83c;
+deny 2a10:1fc0:10::42d2:f78b;
+deny 2a10:1fc0:10::5138:4dfa;
+deny 2a10:1fc0:10::5719:261d;
+deny 2a10:1fc0:10::61d9:7617;
+deny 2a10:1fc0:10::61e2:c84d;
+deny 2a10:1fc0:10::627f:3c31;
+deny 2a10:1fc0:10::694a:c359;
+deny 2a10:1fc0:10::6b4c:30fc;
+deny 2a10:1fc0:10::6c2e:469a;
+deny 2a10:1fc0:10::6d92:d6ab;
+deny 2a10:1fc0:10::6fde:4b8d;
+deny 2a10:1fc0:10::792f:38b4;
+deny 2a10:1fc0:10::895d:abf9;
+deny 2a10:1fc0:10::8a03:d023;
+deny 2a10:1fc0:10::8b78:d42e;
+deny 2a10:1fc0:10::8d4d:eca2;
+deny 2a10:1fc0:10::9a73:d4f2;
+deny 2a10:1fc0:10::9d80:c9f7;
+deny 2a10:1fc0:10::9e08:e765;
+deny 2a10:1fc0:10::a3a5:49da;
+deny 2a10:1fc0:10::a458:8b37;
+deny 2a10:1fc0:10::a63c:724c;
+deny 2a10:1fc0:10::b571:1205;
+deny 2a10:1fc0:10::bf3f:d195;
+deny 2a10:1fc0:10::c129:61a1;
+deny 2a10:1fc0:10::c385:c7fa;
+deny 2a10:1fc0:10::c7c7:2f84;
+deny 2a10:1fc0:10::d5a6:a292;
+deny 2a10:1fc0:10::d5d0:db30;
+deny 2a10:1fc0:10::d6b7:b3e9;
+deny 2a10:1fc0:10::dbe0:6173;
+deny 2a10:1fc0:10::dbe9:7852;
+deny 2a10:1fc0:10::e4c8:9020;
+deny 2a10:1fc0:10::ea87:5496;
+deny 2a10:1fc0:10::fa6c:cac5;
+deny 2a10:1fc0:10::fdb0:ba7f;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1655,7 +1703,6 @@ deny 2c0f:6c0:0:4::95ea;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.184.236.104;
-deny 31.220.75.237;
 deny 31.44.238.25;
 deny 35.0.127.52;
 deny 37.120.239.59;
@@ -1666,6 +1713,7 @@ deny 37.228.129.5;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.242.254.131;
 deny 38.97.116.242;
 deny 38.97.116.243;
 deny 38.97.116.244;
@@ -1771,6 +1819,7 @@ deny 46.182.21.248;
 deny 46.23.109.25;
 deny 46.232.251.191;
 deny 46.234.47.105;
+deny 46.249.49.183;
 deny 46.30.188.218;
 deny 47.254.142.180;
 deny 47.89.193.230;
@@ -1785,7 +1834,6 @@ deny 5.181.80.107;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.227;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.235;
 deny 5.255.104.202;
@@ -1821,7 +1869,6 @@ deny 5.45.104.176;
 deny 5.45.98.162;
 deny 57.128.220.107;
 deny 5.79.66.19;
-deny 60.39.33.71;
 deny 62.133.45.2;
 deny 62.133.63.146;
 deny 62.171.137.169;
@@ -1874,6 +1921,30 @@ deny 84.19.182.20;
 deny 84.211.226.13;
 deny 84.239.46.144;
 deny 85.239.41.130;
+deny 85.239.55.11;
+deny 85.239.55.110;
+deny 85.239.55.112;
+deny 85.239.55.114;
+deny 85.239.55.123;
+deny 85.239.55.132;
+deny 85.239.55.168;
+deny 85.239.55.173;
+deny 85.239.55.174;
+deny 85.239.55.184;
+deny 85.239.55.189;
+deny 85.239.55.192;
+deny 85.239.55.201;
+deny 85.239.55.228;
+deny 85.239.55.230;
+deny 85.239.55.239;
+deny 85.239.55.24;
+deny 85.239.55.249;
+deny 85.239.55.25;
+deny 85.239.55.250;
+deny 85.239.55.31;
+deny 85.239.55.37;
+deny 85.239.55.51;
+deny 85.239.55.80;
 deny 85.90.196.46;
 deny 85.93.218.204;
 deny 86.54.28.49;
@@ -1914,6 +1985,30 @@ deny 91.219.236.101;
 deny 91.219.236.91;
 deny 91.219.237.39;
 deny 91.227.114.153;
+deny 91.227.77.107;
+deny 91.227.77.108;
+deny 91.227.77.119;
+deny 91.227.77.125;
+deny 91.227.77.139;
+deny 91.227.77.158;
+deny 91.227.77.160;
+deny 91.227.77.181;
+deny 91.227.77.193;
+deny 91.227.77.200;
+deny 91.227.77.208;
+deny 91.227.77.209;
+deny 91.227.77.226;
+deny 91.227.77.229;
+deny 91.227.77.237;
+deny 91.227.77.25;
+deny 91.227.77.31;
+deny 91.227.77.36;
+deny 91.227.77.44;
+deny 91.227.77.48;
+deny 91.227.77.51;
+deny 91.227.77.54;
+deny 91.227.77.62;
+deny 91.227.77.97;
 deny 91.92.109.126;
 deny 91.92.109.43;
 deny 92.243.24.163;
