--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -643,7 +643,6 @@ allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.32.162.96;
 allow 193.36.132.21;
-allow 193.56.135.103;
 allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
@@ -915,6 +914,7 @@ allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.127.231;
 allow 207.32.218.41;
+allow 209.135.168.90;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.34.15;
@@ -1013,6 +1013,7 @@ allow 2600:3c0b::f03c:95ff:fefa:bdff;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
+allow 2602:f9f3:0:2::319;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
@@ -1525,6 +1526,7 @@ allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
+allow 2a0d:8140:1fff:62f9::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1726,6 +1728,7 @@ allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.99.10;
 allow 45.137.99.216;
+allow 45.137.99.98;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.164;
