--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -643,7 +643,6 @@ deny 193.26.115.43;
 deny 193.26.115.61;
 deny 193.32.162.96;
 deny 193.36.132.21;
-deny 193.56.135.103;
 deny 194.15.112.133;
 deny 194.15.113.118;
 deny 194.15.115.212;
@@ -915,6 +914,7 @@ deny 205.185.123.93;
 deny 205.185.124.176;
 deny 205.185.127.231;
 deny 207.32.218.41;
+deny 209.135.168.90;
 deny 209.141.32.181;
 deny 209.141.32.198;
 deny 209.141.34.15;
@@ -1013,6 +1013,7 @@ deny 2600:3c0b::f03c:95ff:fefa:bdff;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
+deny 2602:f9f3:0:2::319;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
@@ -1525,6 +1526,7 @@ deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:8140:1fff:22d0::1;
 deny 2a0d:8140:1fff:395e::1;
+deny 2a0d:8140:1fff:62f9::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1726,6 +1728,7 @@ deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.137.99.10;
 deny 45.137.99.216;
+deny 45.137.99.98;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.164;
